fix: sakura a in li overflow

--- a/src/pages/posts/{markdownRemark.frontmatter__slug}.module.css
+++ b/src/pages/posts/{markdownRemark.frontmatter__slug}.module.css
@@ -109,7 +109,7 @@
 
 .mdStyle li {
     margin-bottom: 0.4em;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .mdStyle blockquote {
@@ -381,7 +381,7 @@
 
     .mdStyle li {
         margin-bottom: 0.4em;
-        overflow-x: scroll;
+        overflow-x: auto;
     }
 
     .mdStyle blockquote {
